--- a/homework/practice_3.tex
+++ b/homework/practice_3.tex
@@ -75,5 +75,39 @@
     \maketitle
 
     \begin{problem}\label{prob:1}
+        Muestre que el círculo es cubierto por 2 vecindades abiertas.
     \end{problem}
+
+    \begin{problem}\label{prob:2}
+        Muestre que la permeabilidad marnética es un tensor y explique su origen fisico    
+    \end{problem}
+    
+    \begin{problem}\label{prob:3}
+        Obtenga la transformación de una coordinada para otra del tensor de rango(m,n)    
+    \end{problem}
+    
+    \begin{problem}\label{prob:4}
+        Obtenga la transformación de una coordinada para otra del tensor de rango (3,3)
+    \end{problem}
+
+    \begin{problem}\label{prob:5}
+        ¿Cuántos componentes independientes tiene el tensor simétrico de segundo rango?    
+    \end{problem}
+
+    \begin{problem}\label{prob:6}
+        ¿Cuántos componentes independientes tiene el tensor anti simétrico de segundo rango?    
+    \end{problem}
+    
+    \begin{problem}\label{prob:7}
+        Bajar los indices de un tensor contravariante de cuarto rango    
+    \end{problem}
+    
+    \begin{problem}\label{prob:8}
+        Subir los índices de un tensor convariante de quinto rango
+    \end{problem}
+
+    \begin{problem}\label{prob:9}
+        Muestre que el producto de 2 tensores de Livi-Civita con las indices contraidos de tercer rango es 6
+    \end{problem}
+    
 \end{document}
