--- a/homework/practice_1.tex
+++ b/homework/practice_1.tex
@@ -75,5 +75,35 @@
     \maketitle
 
     \begin{problem}\label{prob:1}
+        Formule y resuelva la paradoja de los mellizos en marco de la relatividad especial.
     \end{problem}
+
+    \begin{problem}\label{prob:2}
+        Obtener en las ecuaciones de aberración de la luz clásica y relativista. Explique en detalle el procedimiento seguido y presente un ejemplo.
+    \end{problem}
+
+    \begin{problem}\label{prob:3}
+        Muestre que la esfera de n-dimensiones pueden ser cubierto por dos sistemas de coordinadas. Explique en detalle el procedimiento seguido.    
+    \end{problem}
+
+    \begin{problem}\label{prob:4}
+        Muestre que la esfera bidimensional puede ser cubierto por dos sistemas de coordinadas usando la proyección estereográfica.
+    \end{problem}
+
+    \begin{problem}\label{prob:5}
+        Presente cuatro ejemplos de espacios que no son variedades y explique de forma precisa la causa.
+    \end{problem}
+
+    \begin{problem}\label{prob:6}
+        Formule la propiedad de compacto del espacio topológico y muestre que el disco abierto no es compacto mientras que el cerrado es compacto.
+    \end{problem}
+
+    \begin{problem}\label{prob:7}
+        Formule la propidad de Hausdorff del espacio topológica y presente dos ejemplos que no cumplen con esta propiedad.
+    \end{problem}
+
+    \begin{problem}\label{prob:8}
+        Justifique el por qué del grupo de rotaciones en 3-dimensiones es compacto, mientras que el grupo de Lorentz no es compacto.
+    \end{problem}
+    
 \end{document}
