--- a/homework/practice_4.tex
+++ b/homework/practice_4.tex
@@ -75,5 +75,49 @@
     \maketitle
 
     \begin{problem}\label{prob:1}
+        Usando la relaciòn entre las bases: $\epsilon^{1}_{a}=\frac{ax^{b}}{ax^{1a}}e_{b}$
+            \begin{enumerate}[label=(\alph*)]
+                \item Hallar la relación entre las bases de coordenadas cartesianas y las bases de coordenadas cilindricas.
+                \item Hallar la relacióm entre las bases de coordenadas cartesianas y las bases de coordenadas esféricas 
+                \item Hallar la relación entre las bases de coordenadas cilíndricas y las bases de coordenadas esféricas
+             \end{enumerate}  
     \end{problem}
+
+    \begin{problem}\label{prob:2}
+        Dado el tensor de levi-civita de cuarto orden, hallar.
+            \begin{enumerate}[label=(\alph*)]
+                \item $\epsilon^{\alpha\beta\gamma\sigma} \epsilon_{\mu\nu\rho\sigma}$
+                \item $\epsilon^{\alpha\beta\gamma\sigma} \epsilon_{\mu\nu\rho\delta}$
+                \item $\epsilon^{\alpha\beta\gamma\sigma} \epsilon_{\mu\nu\gamma\delta}$
+                \item $\epsilon^{\alpha\beta\gamma\sigma} \epsilon_{\mu\beta\gamma\delta}$
+                \item $\epsilon^{\alpha\beta\gamma\sigma} \epsilon_{\mu\alpha\gamma\delta}$
+             \end{enumerate}  
+    \end{problem}
+    
+    \begin{problem}\label{prob:3}
+        para tensores antisimétricos de $3^{er}$ y $4^{to}$ rango mostrar que:
+        \begin{enumerate}[label=\alph*)]
+                \item $T_{(\alpha\beta\gamma)}=\frac{1}{3!}(T_{\alpha(\beta\gamma\delta)}+T_{\beta(\alpha\gamma\delta)} + T_{\gamma(\alpha\beta)} )$
+                \item $T_{\alpha\beta\delta}= \frac{1}{4!}(T_{\alpha(\beta\gamma\delta)}-T_{\beta(\alpha\gamma\delta)}+T_{\gamma(\alpha\beta\delta)}-T_{\delta(\alpha\beta\gamma)})$
+        \end{enumerate}    
+    \end{problem}
+    
+    \begin{problem}\label{prob:4}
+        Reducir las cuatro ecuaciones de Maxwell a dos ecuaciones tensoriales.    
+    \end{problem}
+
+    \begin{problem}\label{prob:5}
+        Muestre que $B^{k}= -\frac{1}{2}e^{\kappa\iota\eta}F_{\iota\eta}$
+    \end{problem}
+    
+    \begin{problem}\label{prob:6}
+        Obtener la fuerza de Lorentz en forma tensorial.    
+    \end{problem}
+    
+    \begin{problem}\label{prob:7}
+        Usando $F^{1}_{\mu\nu}=\frac{\alpha x^{\alpha}}{\alpha x^{1\mu}}\frac{\alpha x^{\beta}}{\alpha x^{1\nu}}F_{\alpha\beta}$ con $ T^{1} = \gamma(t- \beta x), x^{1} = \gamma(x-\beta t),y^{1}= y, z^{1}= z$, hallar todas las componentes diferentes de cero del tensor $F^{1}_{\mu\nu}$
+    \end{problem}
+    
+    
+
 \end{document}
