--- a/homework/practice_5.tex
+++ b/homework/practice_5.tex
@@ -75,5 +75,45 @@
     \maketitle
 
     \begin{problem}\label{prob:1}
+        Muestre que la conexion no es tensor bajo la transformación de coordinadas, pero la diferencia de 2 conecciones sí lo es.
     \end{problem}
+
+    \begin{problem}\label{prob:2}
+        Asumiendo que $T^{\alpha\beta} = A^{\alpha} B^{\beta}$, mostrar que la derivada covariante de un tensor contravariante, misto y covariante de rango 2 son tensores.    
+    \end{problem}
+    
+    \begin{problem}\label{prob:3}
+        Calcule los componentes diferentes de cero de la conexion en coordinadas Cartesianas, Cilidricas y Esféricas.
+    \end{problem}
+    
+    \begin{problem}\label{prob:4}
+        Para una partícula masiva que se mueve en espacio-tiempo curvo, hallar su ecuacion de movimiento.    
+    \end{problem}
+
+    \begin{problem}\label{prob:5}
+        Para la luz que se mueve en espacio-tiempo curvo, hllar su ecuacion de movimiento.    
+    \end{problem}
+    
+    \begin{problem}\label{prob:6}
+        Para una partícula masiva cargada que se mueve en espacio-tiempo curvo y en presencia del campo electromagnetico, hallar su ecuacion de movimiento.
+    \end{problem}
+    
+    \begin{problem}\label{prob:7}
+        Para una accion cuya lagrangiana es $L = - M\sqrt{-9\alpha\beta\frac{d x^{\alpha}}{d\tau}\frac{dx^{\beta}}{d\tau}}$, galllar las ecuaciones de Euler-Lagrange
+    \end{problem}
+    
+    \begin{problem}\label{prob:8}
+        Calcule :
+        \begin{enumerate}[label=\alph*)]
+                \item $(\bigtriangleup_{\alpha}\bigtriangleup_{\beta} - \bigtriangleup_{\beta}\bigtriangleup_{\alpha})T^{\mu}$
+                \item $(\bigtriangleup_{\alpha}\bigtriangleup_{\beta} - \bigtriangleup_{\beta}\bigtriangleup_{\alpha})T^{\mu}$
+                \item $(\bigtriangleup_{\alpha}\bigtriangleup_{\beta} - \bigtriangleup_{\beta}\bigtriangleup_{\alpha})T^{\mu\nu}_{\rho \sigma}$
+        \end{enumerate}       
+    \end{problem}
+    
+    \begin{problem}\label{prob:9}
+        Obtener la ecuacion de desvio geodé sico y como aplicacion explique lo que sucede a un astronauta cerca al horizonte de una agujero negro.    
+    \end{problem}
+    
+
 \end{document}
